--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./assets/input.css" rel="stylesheet">
+    <link href="./output.css" rel="stylesheet">
 </head>
+    <div class="">
+        <div>
+            <img src="" alt="imagem do grupo">
+            <p>grupo 1</p>
+        </div>
+    </div>
 <body>
     
 </body>
